added a data_cleaner script into the scripts folder

--- a/main.ipynb
+++ b/main.ipynb
@@ -26,11 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ea47f257",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from scripts import data_collection as dc\n",
+    "from scripts import data_cleaner as dcl\n",
     "landlocked_url = \"https://en.wikipedia.org/wiki/List_of_countries_by_length_of_coastline\"\n",
     "codesISO_url = \"https://en.wikipedia.org/wiki/List_of_ISO_3166_country_codes\""
    ]
@@ -48,8 +50,23 @@
    "execution_count": null,
    "id": "2468ec17",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'scripts.data_cleaner' has no attribute 'clean_ISO_data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m codesISO_data = dc.get_ISOcodes(codesISO_url)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m codesISO_data = \u001b[43mdcl\u001b[49m\u001b[43m.\u001b[49m\u001b[43mclean_ISO_data\u001b[49m(codesISO_data)\n",
+      "\u001b[31mAttributeError\u001b[39m: module 'scripts.data_cleaner' has no attribute 'clean_ISO_data'"
+     ]
+    }
+   ],
+   "source": [
+    "codesISO_data = dc.get_ISOcodes(codesISO_url)\n",
+    "codesISO_data = dcl.clean_ISOData(codesISO_data)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,21 +78,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6da67ada",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['AF', 'AX', 'AL', 'DZ', 'AS', 'AD', 'AO', 'AI', 'AQ', 'AG', 'AR', 'AM', 'AW', 'AU', 'AT', 'AZ', 'BS', 'BH', 'BD', 'BB', 'BY', 'BE', 'BZ', 'BJ', 'BM', 'BT', 'BO', 'BQ', 'BA', 'BW', 'BV', 'BR', 'IO', None, 'BN', 'BG', 'BF', None, 'BI', 'CV', 'KH', 'CM', 'CA', None, None, 'KY', 'CF', 'TD', 'CL', 'CN', None, 'CX', 'CC', 'CO', 'KM', 'CD', 'CG', 'CK', 'CR', 'CI', 'HR', 'CU', 'CW', 'CY', 'CZ', None, None, 'DK', 'DJ', 'DM', 'DO', None, 'EC', 'EG', 'SV', 'GQ', 'ER', 'EE', 'SZ', 'ET', 'FK', 'FO', 'FJ', 'FI', 'FR', 'GF', 'PF', 'TF', 'GA', 'GM', 'GE', 'DE', 'GH', 'GI', None, 'GR', 'GL', 'GD', 'GP', 'GU', 'GT', 'GG', 'GN', 'GW', 'GY', 'HT', 'HM', 'VA', 'HN', 'HK', 'HU', 'IS', 'IN', 'ID', 'IR', 'IQ', 'IE', 'IM', 'IL', 'IT', None, 'JM', None, 'JP', 'JE', 'JO', 'KZ', 'KE', 'KI', 'KP', 'KR', 'KW', 'KG', 'LA', 'LV', 'LB', 'LS', 'LR', 'LY', 'LI', 'LT', 'LU', 'MO', 'MG', 'MW', 'MY', 'MV', 'ML', 'MT', 'MH', 'MQ', 'MR', 'MU', 'YT', 'MX', 'FM', 'MD', 'MC', 'MN', 'ME', 'MS', 'MA', 'MZ', 'MM', 'NA', 'NR', 'NP', 'NL', 'NC', 'NZ', 'NI', 'NE', 'NG', 'NU', 'NF', None, 'MK', 'MP', 'NO', 'OM', 'PK', 'PW', 'PS', 'PA', 'PG', 'PY', None, 'PE', 'PH', 'PN', 'PL', 'PT', 'PR', 'QA', None, None, None, 'RE', 'RO', 'RU', 'RW', None, None, 'BL', 'SH', 'KN', 'LC', 'MF', 'PM', 'VC', 'WS', 'SM', 'ST', 'SA', 'SN', 'RS', 'SC', 'SL', 'SG', None, 'SX', 'SK', 'SI', 'SB', 'SO', 'ZA', 'GS', None, 'SS', 'ES', 'LK', 'SD', 'SR', 'SJ', 'SE', 'CH', 'SY', 'TW', 'TJ', 'TZ', 'TH', 'TL', 'TG', 'TK', 'TO', 'TT', 'TN', 'TR', 'TM', 'TC', 'TV', 'UG', 'UA', 'AE', 'GB', 'UM', 'US', None, 'UY', 'UZ', 'VU', None, 'VE', 'VN', 'VG', 'VI', 'WF', 'EH', 'YE', 'ZM', 'ZW']\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'upper'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      7\u001b[39m liste_pays = codesISO_data[\u001b[33m\"\u001b[39m\u001b[33mISO-2\u001b[39m\u001b[33m\"\u001b[39m].tolist()\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(liste_pays)\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m PIB_Reel_data = \u001b[43mwb\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_indicator\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mPIB_reel\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mliste_pays\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstart\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m2000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mend\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m2024\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\gbedo\\OneDrive\\Bureau\\Python Project\\Data-Science-Project-ENSAE\\scripts\\data_collection.py:32\u001b[39m, in \u001b[36mWorldBankData.get_indicator\u001b[39m\u001b[34m(self, indicator_name, countries, start, end)\u001b[39m\n\u001b[32m     29\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mIndicateur inconnu. Choisir parmi : \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mself\u001b[39m.INDICATEURS.keys())\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     31\u001b[39m code = \u001b[38;5;28mself\u001b[39m.INDICATEURS[indicator_name]\n\u001b[32m---> \u001b[39m\u001b[32m32\u001b[39m countries_str = \u001b[33m\"\u001b[39m\u001b[33m;\u001b[39m\u001b[33m\"\u001b[39m.join([\u001b[43mc\u001b[49m\u001b[43m.\u001b[49m\u001b[43mupper\u001b[49m() \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m countries])\n\u001b[32m     33\u001b[39m url = \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mhttps://api.worldbank.org/v2/country/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcountries_str\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m/indicator/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcode\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m?date=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstart\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mend\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m&format=json&per_page=20000\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     35\u001b[39m response = requests.get(url)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'NoneType' object has no attribute 'upper'"
+     ]
+    }
+   ],
    "source": [
-    "wb = WorldBankData()\n",
+    "wb = dc.WorldBankData()\n",
     "\n",
-    "# --- Télécharger le PIB réel pour GB, France et Allemagne ---\n",
-    "PIB_Reel_data = wb.get_indicator(\"PIB_reel\", [\"GB\", \"FR\", \"DE\"], start=2000, end=2024)\n"
+    "# L'API permet de récupérer des données sur les pays via leurs codes ISO avec 2 lettres\n",
+    "# Exemple : \"FR\" pour la France, \"DE\" pour l'Allemagne, \"GB\" pour le Royaume-Uni, etc.\n",
+    "\n",
+    "# Récupérer le PIB réel pour tous les pays du monde entre 2000 et 2024\n",
+    "liste_pays = codesISO_data[\"ISO-2\"].tolist()\n",
+    "print(liste_pays)\n",
+    "PIB_Reel_data = wb.get_indicator(\"PIB_reel\", liste_pays, start=2000, end=2024)\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
