added in main.ipynb the new variable weightCountry in the PIB dataframe

--- a/main.ipynb
+++ b/main.ipynb
@@ -650,94 +650,227 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a02e7ed3",
+   "id": "90094784",
    "metadata": {},
    "source": [
-    "# Cartographie"
+    "# Ajout de la variable symbolisant la taille du pays dans l'économie mondiale"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "82dfbf99",
+   "execution_count": 46,
+   "id": "39f3520a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>date</th>\n",
+       "      <th>PIB</th>\n",
+       "      <th>weightCountry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>2024</td>\n",
+       "      <td>8.959422e+10</td>\n",
+       "      <td>0.015596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>8.579857e+10</td>\n",
+       "      <td>0.011099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>8.488345e+10</td>\n",
+       "      <td>0.010102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>8.237534e+10</td>\n",
+       "      <td>0.010873</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>8.139919e+10</td>\n",
+       "      <td>0.011398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6365</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>1.775729e+10</td>\n",
+       "      <td>0.023452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6366</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>1.625602e+10</td>\n",
+       "      <td>0.023901</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6367</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>1.608687e+10</td>\n",
+       "      <td>0.024534</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6368</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>1.768090e+10</td>\n",
+       "      <td>0.025104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6369</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>1.675410e+10</td>\n",
+       "      <td>0.025099</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6370 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       country  date           PIB  weightCountry\n",
+       "0       Angola  2024  8.959422e+10       0.015596\n",
+       "1       Angola  2023  8.579857e+10       0.011099\n",
+       "2       Angola  2022  8.488345e+10       0.010102\n",
+       "3       Angola  2021  8.237534e+10       0.010873\n",
+       "4       Angola  2020  8.139919e+10       0.011398\n",
+       "...        ...   ...           ...            ...\n",
+       "6365  Zimbabwe  1994  1.775729e+10       0.023452\n",
+       "6366  Zimbabwe  1993  1.625602e+10       0.023901\n",
+       "6367  Zimbabwe  1992  1.608687e+10       0.024534\n",
+       "6368  Zimbabwe  1991  1.768090e+10       0.025104\n",
+       "6369  Zimbabwe  1990  1.675410e+10       0.025099\n",
+       "\n",
+       "[6370 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import plotly.express as px\n",
-    "import plotly.graph_objects as go\n",
-    "\n",
-    "def world_map(dataframe, y_col, data_name, width=900, height=500):\n",
-    "    \"\"\"\n",
-    "    Creates an animated world map showing the distribution of a specific data column across countries and years.\n",
-    "    Parameters:\n",
-    "    - dataframe (DataFrame): The input dataframe containing country-level data.\n",
-    "    - y_col (str): The column to be visualized on the map (e.g., 'HDI' or 'CG_debt').\n",
-    "    - data_name (str): A label for the data being visualized (e.g., 'IDH' or 'Dette publique').\n",
-    "    - width (int): The width of the map figure.\n",
-    "    - height (int): The height of the map figure.\n",
-    "    Notes:\n",
-    "    - Assumes the dataframe has columns 'country_code', 'year', and the specified y_col.\n",
-    "    \"\"\"\n",
-    "    min_value = dataframe[y_col].min()\n",
-    "    max_value = dataframe[y_col].max()\n",
-    "    # Création d'une carte du monde avec Plotly\n",
-    "    fig = px.choropleth(dataframe, \n",
-    "                        locations='country',\n",
-    "                        color=y_col,\n",
-    "                        hover_name='country',\n",
-    "                        color_continuous_scale=\"turbo\",\n",
-    "                        projection='natural earth',\n",
-    "                        animation_frame='year',\n",
-    "                        range_color=(min_value, max_value))\n",
-    "    fig.update_coloraxes(colorbar_title_text='')\n",
-    "    # Mise en page des sous-plots pour les barres d'histogramme\n",
-    "    fig.update_layout(\n",
-    "        xaxis2=dict(domain=[0, 0.45], anchor='y2'),\n",
-    "        xaxis3=dict(domain=[0.55, 1], anchor='y3'),\n",
-    "        yaxis2=dict(domain=[0, 1], anchor='x2'),\n",
-    "        yaxis3=dict(domain=[0, 1], anchor='x3'),\n",
-    "        title_text= f'{data_name} par pays, 1990-2021',\n",
-    "    )\n",
-    "    # Ajout d'un slider pour choisir l'année\n",
-    "    slider = go.layout.Slider(\n",
-    "        currentvalue=dict(prefix=\"Année: \"),\n",
-    "        font=dict(size=16),\n",
-    "        len=0.9,\n",
-    "        pad=dict(t=50, b=10),\n",
-    "        steps=[\n",
-    "            {\"args\": [f\"slider{i}.value\", {\"duration\": 400, \"frame\": {\"duration\": 400, \"redraw\": True}, \"mode\": \"immediate\"}],\n",
-    "             \"label\": str(i),\n",
-    "             \"method\": \"animate\",\n",
-    "            } for i in range(1990, 2022)\n",
-    "        ],\n",
-    "    )\n",
-    "    fig.update_layout(\n",
-    "    sliders=[\n",
-    "        {\n",
-    "            \"steps\": [\n",
-    "                {\"args\": [[f\"{year}\"], {\"frame\": {\"duration\": 500, \"redraw\": True}, \"mode\": \"immediate\", \"transition\": {\"duration\": 500}}], \"label\": f\"{year}\", \"method\": \"animate\"} \n",
-    "                for year in sorted(dataframe['year'].unique())\n",
-    "            ],\n",
-    "            \"active\": 0,\n",
-    "            \"yanchor\": \"top\",\n",
-    "            \"xanchor\": \"left\",\n",
-    "            \"transition\": {\"duration\": 300, \"easing\": \"cubic-in-out\"},\n",
-    "        }\n",
-    "    ],\n",
-    "    updatemenus=[{\"type\": \"buttons\", \"showactive\": False, \"buttons\": [{\"label\": \"Play\", \"method\": \"animate\", \"args\": [None, {\"frame\": {\"duration\": 500, \"redraw\": True}, \"fromcurrent\": True, \"transition\": {\"duration\": 300, \"easing\": \"quadratic-in-out\"}}]}]},\n",
-    "                 {\"type\": \"buttons\", \"showactive\": False, \"buttons\": [{\"label\": \"Quick\", \"method\": \"animate\", \"args\": [None, {\"frame\": {\"duration\": 0, \"redraw\": True}, \"transition\": {\"duration\": 0}}]}]}]\n",
-    ")\n",
-    "    fig.update_layout(\n",
-    "        geo=dict(\n",
-    "            showcoastlines=True,\n",
-    "            coastlinecolor=\"Black\",\n",
-    "            showland=True,\n",
-    "            landcolor=\"white\",\n",
-    "    ),\n",
-    "    width=width,\n",
-    "    height=height\n",
-    ")\n",
-    "    fig.show()\n"
+    "weightCountry = PIB_Reel_data_final.groupby(['country','date']).sum().apply(lambda x: 100*x/PIB_Reel_data_final.groupby(\"date\")[\"PIB\"].sum()).reset_index()['PIB']\n",
+    "PIB_Reel_data_final['weightCountry'] = weightCountry\n",
+    "PIB_Reel_data_final"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff7523b9",
+   "metadata": {},
+   "source": [
+    "On vérifié=e bien si la somme des poids est égale à 100 par année"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "5ba8c876",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date\n",
+       "1990    100.0\n",
+       "1991    100.0\n",
+       "1992    100.0\n",
+       "1993    100.0\n",
+       "1994    100.0\n",
+       "1995    100.0\n",
+       "1996    100.0\n",
+       "1997    100.0\n",
+       "1998    100.0\n",
+       "1999    100.0\n",
+       "2000    100.0\n",
+       "2001    100.0\n",
+       "2002    100.0\n",
+       "2003    100.0\n",
+       "2004    100.0\n",
+       "2005    100.0\n",
+       "2006    100.0\n",
+       "2007    100.0\n",
+       "2008    100.0\n",
+       "2009    100.0\n",
+       "2010    100.0\n",
+       "2011    100.0\n",
+       "2012    100.0\n",
+       "2013    100.0\n",
+       "2014    100.0\n",
+       "2015    100.0\n",
+       "2016    100.0\n",
+       "2017    100.0\n",
+       "2018    100.0\n",
+       "2019    100.0\n",
+       "2020    100.0\n",
+       "2021    100.0\n",
+       "2022    100.0\n",
+       "2023    100.0\n",
+       "2024    100.0\n",
+       "Name: weightCountry, dtype: float64"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PIB_Reel_data_final.groupby('date').sum()['weightCountry']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3c803ab",
+   "metadata": {},
+   "source": [
+    "# Association aux pays d'une variable symbolisant leur taille moyenne"
    ]
   }
  ],
