fixed issues with the weightCountry variable. Created instead a dataframe containing the economic power of the countries

--- a/main.ipynb
+++ b/main.ipynb
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "80492a97",
    "metadata": {},
    "outputs": [
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1ae8448e",
    "metadata": {},
    "outputs": [
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "id": "39f3520a",
    "metadata": {},
    "outputs": [
@@ -684,193 +684,99 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>country</th>\n",
-       "      <th>date</th>\n",
-       "      <th>PIB</th>\n",
-       "      <th>weightCountry</th>\n",
+       "      <th>avgWeightCountry</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Angola</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>8.959422e+10</td>\n",
-       "      <td>0.015596</td>\n",
+       "      <th>175</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>26.409606</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Angola</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>8.579857e+10</td>\n",
-       "      <td>0.011099</td>\n",
+       "      <th>34</th>\n",
+       "      <td>China</td>\n",
+       "      <td>10.542865</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Angola</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>8.488345e+10</td>\n",
-       "      <td>0.010102</td>\n",
+       "      <th>81</th>\n",
+       "      <td>Japan</td>\n",
+       "      <td>7.344783</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Angola</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>8.237534e+10</td>\n",
-       "      <td>0.010873</td>\n",
+       "      <th>61</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>5.376389</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Angola</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>8.139919e+10</td>\n",
-       "      <td>0.011398</td>\n",
+       "      <th>174</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>4.343731</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6365</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>1994</td>\n",
-       "      <td>1.775729e+10</td>\n",
-       "      <td>0.023452</td>\n",
+       "      <th>139</th>\n",
+       "      <td>Sao Tome and Principe</td>\n",
+       "      <td>0.000334</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6366</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>1993</td>\n",
-       "      <td>1.625602e+10</td>\n",
-       "      <td>0.023901</td>\n",
+       "      <th>103</th>\n",
+       "      <td>Marshall Islands</td>\n",
+       "      <td>0.000311</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6367</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>1.608687e+10</td>\n",
-       "      <td>0.024534</td>\n",
+       "      <th>85</th>\n",
+       "      <td>Kiribati</td>\n",
+       "      <td>0.000272</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6368</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>1991</td>\n",
-       "      <td>1.768090e+10</td>\n",
-       "      <td>0.025104</td>\n",
+       "      <th>115</th>\n",
+       "      <td>Nauru</td>\n",
+       "      <td>0.000156</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6369</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>1.675410e+10</td>\n",
-       "      <td>0.025099</td>\n",
+       "      <th>170</th>\n",
+       "      <td>Tuvalu</td>\n",
+       "      <td>0.000055</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6370 rows × 4 columns</p>\n",
+       "<p>182 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       country  date           PIB  weightCountry\n",
-       "0       Angola  2024  8.959422e+10       0.015596\n",
-       "1       Angola  2023  8.579857e+10       0.011099\n",
-       "2       Angola  2022  8.488345e+10       0.010102\n",
-       "3       Angola  2021  8.237534e+10       0.010873\n",
-       "4       Angola  2020  8.139919e+10       0.011398\n",
-       "...        ...   ...           ...            ...\n",
-       "6365  Zimbabwe  1994  1.775729e+10       0.023452\n",
-       "6366  Zimbabwe  1993  1.625602e+10       0.023901\n",
-       "6367  Zimbabwe  1992  1.608687e+10       0.024534\n",
-       "6368  Zimbabwe  1991  1.768090e+10       0.025104\n",
-       "6369  Zimbabwe  1990  1.675410e+10       0.025099\n",
+       "                   country  avgWeightCountry\n",
+       "175          United States         26.409606\n",
+       "34                   China         10.542865\n",
+       "81                   Japan          7.344783\n",
+       "61                 Germany          5.376389\n",
+       "174         United Kingdom          4.343731\n",
+       "..                     ...               ...\n",
+       "139  Sao Tome and Principe          0.000334\n",
+       "103       Marshall Islands          0.000311\n",
+       "85                Kiribati          0.000272\n",
+       "115                  Nauru          0.000156\n",
+       "170                 Tuvalu          0.000055\n",
        "\n",
-       "[6370 rows x 4 columns]"
+       "[182 rows x 2 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "weightCountry = PIB_Reel_data_final.groupby(['country','date']).sum().apply(lambda x: 100*x/PIB_Reel_data_final.groupby(\"date\")[\"PIB\"].sum()).reset_index()['PIB']\n",
-    "PIB_Reel_data_final['weightCountry'] = weightCountry\n",
-    "PIB_Reel_data_final"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ff7523b9",
-   "metadata": {},
-   "source": [
-    "On vérifié=e bien si la somme des poids est égale à 100 par année"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "5ba8c876",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "date\n",
-       "1990    100.0\n",
-       "1991    100.0\n",
-       "1992    100.0\n",
-       "1993    100.0\n",
-       "1994    100.0\n",
-       "1995    100.0\n",
-       "1996    100.0\n",
-       "1997    100.0\n",
-       "1998    100.0\n",
-       "1999    100.0\n",
-       "2000    100.0\n",
-       "2001    100.0\n",
-       "2002    100.0\n",
-       "2003    100.0\n",
-       "2004    100.0\n",
-       "2005    100.0\n",
-       "2006    100.0\n",
-       "2007    100.0\n",
-       "2008    100.0\n",
-       "2009    100.0\n",
-       "2010    100.0\n",
-       "2011    100.0\n",
-       "2012    100.0\n",
-       "2013    100.0\n",
-       "2014    100.0\n",
-       "2015    100.0\n",
-       "2016    100.0\n",
-       "2017    100.0\n",
-       "2018    100.0\n",
-       "2019    100.0\n",
-       "2020    100.0\n",
-       "2021    100.0\n",
-       "2022    100.0\n",
-       "2023    100.0\n",
-       "2024    100.0\n",
-       "Name: weightCountry, dtype: float64"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "PIB_Reel_data_final.groupby('date').sum()['weightCountry']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c3c803ab",
-   "metadata": {},
-   "source": [
-    "# Association aux pays d'une variable symbolisant leur taille moyenne"
+    "weightCountry = PIB_Reel_data_final.groupby(['country','date']).sum().apply(lambda x: 100*x/PIB_Reel_data_final.groupby(\"date\")[\"PIB\"].sum()).reset_index() # Associer à chaque pays son poids dans l'économie mondiale par année\n",
+    "weightCountry.rename(columns={\"PIB\":\"weightCountry\"},inplace=True)\n",
+    "powerCountry = weightCountry.groupby(['country']).mean()['weightCountry'].reset_index() \n",
+    "powerCountry.rename(columns={\"weightCountry\":\"avgWeightCountry\"},inplace=True)\n",
+    "\n",
+    "powerCountry.sort_values(by=\"avgWeightCountry\",ascending=False)\n"
    ]
   }
  ],
