feature: finished the cleaning algorithm for countries name.
Added backup files for the various data in order to deal with API errors

--- a/main.ipynb
+++ b/main.ipynb
@@ -965,12 +965,12 @@
     }
    ],
    "source": [
-    "weightCountry = PIB_Reel_data_final.groupby(['country','date']).sum().apply(lambda x: 100*x/PIB_Reel_data_final.groupby(\"date\")[\"PIB\"].sum()).reset_index() # Associer à chaque pays son poids dans l'économie mondiale par année\n",
-    "weightCountry.rename(columns={\"PIB\":\"weightCountry\"},inplace=True)\n",
-    "powerCountry = weightCountry.groupby(['country']).mean()['weightCountry'].reset_index() \n",
-    "powerCountry.rename(columns={\"weightCountry\":\"avgWeightCountry\"},inplace=True)\n",
+    "dump = PIB_Reel_data_final.groupby(['country','date']).sum().apply(lambda x: 100*x/PIB_Reel_data_final.groupby(\"date\")[\"PIB\"].sum()).reset_index() # Associer à chaque pays son poids dans l'économie mondiale par année\n",
+    "dump.rename(columns={\"PIB\":\"weightCountry\"},inplace=True)\n",
+    "weightCountry = dump.groupby(['country']).mean()['weightCountry'].reset_index() \n",
+    "weightCountry.rename(columns={\"weightCountry\":\"avgWeightCountry\"},inplace=True)\n",
     "\n",
-    "powerCountry.sort_values(by=\"avgWeightCountry\",ascending=False)"
+    "weightCountry.sort_values(by=\"avgWeightCountry\",ascending=False)"
    ]
   },
   {
@@ -1016,19 +1016,19 @@
     "\n",
     "# KMeans clustering\n",
     "kmeans = KMeans(n_clusters=3, random_state=42)\n",
-    "powerCountry[\"cluster\"] = kmeans.fit_predict(powerCountry[[\"avgWeightCountry\"]])\n",
+    "weightCountry[\"cluster\"] = kmeans.fit_predict(weightCountry[[\"avgWeightCountry\"]])\n",
     "\n",
     "# Sort clusters by weight (so 2 = high, 1 = med, 0 = low)\n",
-    "cluster_order = powerCountry.groupby(\"cluster\")[\"avgWeightCountry\"].mean().sort_values().index\n",
+    "cluster_order = weightCountry.groupby(\"cluster\")[\"avgWeightCountry\"].mean().sort_values().index\n",
     "mapping = {cluster_order[0]: 0, cluster_order[1]: 1, cluster_order[2]: 2}\n",
-    "powerCountry[\"cluster\"] = powerCountry[\"cluster\"].map(mapping)\n",
+    "weightCountry[\"cluster\"] = weightCountry[\"cluster\"].map(mapping)\n",
     "\n",
     "\n",
     "\n",
     "import plotly.express as px\n",
     "\n",
     "fig = px.choropleth(\n",
-    "    powerCountry,\n",
+    "    weightCountry,\n",
     "    locations=\"country\",\n",
     "    locationmode=\"country\",\n",
     "    color=\"cluster\",\n",
@@ -1055,7 +1055,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
